# mcBase64x32

./: Cargo.toml  LICENSE  README.md  pyproject.toml  pytest.ini  run_tests.py
.github/workflows/: publish-with-uv.yml
mcbase64x32/: __init__.py  main.py
mcbase64x32/utils/: baseList.json  thinBase64.json
src/: lib.rs
src/mcbase64x32/: __init__.py  main.py
src/mcbase64x32/utils/: baseList.json
tests/: __init__.py  conftest.py  test_basic_functionality.py  test_error_handling.py  test_large_data.py  test_roundtrip.py
