[package]
name = "rust_mcbase64x32"
version = "1.0.0"
edition = "2021"

[lib]
name = "rust_mcbase64x32"
crate-type = ["cdylib"]

[dependencies]
bitstream-io = "4.5.0"
lazy_static = "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.143"
pyo3 = { version = "0.26.0", features = ["extension-module"] }