[project]
name = "mcbase64x32"
version = "0.1.0"
description = "Base64x32 implementation specialized to maximize data stored in a Minecraft book"
authors = [
    {name = "ThorTuwy"},
    {name = "victordlp8"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
]

[project.scripts]
mcbase64x32 = "mcbase64x32.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcbase64x32"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
]
